; ModuleID = '/home/carl/AnghaBench/php-src/sapi/phpdbg/extr_phpdbg_prompt.c_phpdbg_output_ev_variable.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/phpdbg/extr_phpdbg_prompt.c_phpdbg_output_ev_variable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"eval\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"variable=\22%.*s\22\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"Printing variable %.*s\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"<eval %r>\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"</eval>\00", align 1
@.str.5 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @phpdbg_output_ev_variable(i8* %0, i64 %1, i8* %2, i64 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  store i8* %0, i8** %7, align 8
  store i64 %1, i64* %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %13 = load i64, i64* %8, align 8
  %14 = trunc i64 %13 to i32
  %15 = load i8*, i8** %7, align 8
  %16 = call i32 @phpdbg_notice(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i64 0, i64 0), i32 %14, i8* %15)
  %17 = call i32 @phpdbg_xml(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0))
  %18 = load i32*, i32** %12, align 8
  %19 = call i32 @zend_print_zval_r(i32* %18, i32 0)
  %20 = call i32 @phpdbg_xml(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0))
  %21 = call i32 @phpdbg_out(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.5, i64 0, i64 0))
  %22 = load i8*, i8** %7, align 8
  %23 = call i32 @efree(i8* %22)
  %24 = load i8*, i8** %9, align 8
  %25 = call i32 @efree(i8* %24)
  %26 = load i32, i32* @SUCCESS, align 4
  ret i32 %26
}

declare dso_local i32 @phpdbg_notice(i8*, i8*, i8*, i32, i8*) #1

declare dso_local i32 @phpdbg_xml(i8*) #1

declare dso_local i32 @zend_print_zval_r(i32*, i32) #1

declare dso_local i32 @phpdbg_out(i8*) #1

declare dso_local i32 @efree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
